[package]
name = "dirsend"
version = "0.1.0"
edition = "2021"
description = "Simple transfer of files and directories"
authors = ["Martín Andrighetti <martin.andrighetti@gmail.com>"]

[dependencies]
anyhow = "1"
console = "0.15"
flate2 = "1"
tar = "0.4"
argon2 = "0.5"
aes-gcm = "0.10"
getrandom = "0.3"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
